# lis-cmake

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.in
config/: config.guess
doc/: Makefile  lis-manual-en.tex  lis-manual-ja.tex
include/: Configure.h.in  Makefile.am  Makefile.in  lis.h  lis_config.h  lis_config.h.in  lis_config_win32.h  lis_esolver.h  lis_fortran.h  lis_io.h  lis_matrix.h  lis_matvec.h  lis_mpi.h  lis_precision.h  lis_precon.h  lis_solver.h  lis_system.h  lis_vector.h  lisf.h  lisf.h.in  lislib.h
src/: CMakeLists.txt  Makefile.am  Makefile.in
src/esolver/: Makefile.in  lis_esolver.c  lis_esolver_aii.c  lis_esolver_cg.c  lis_esolver_ii.c  lis_esolver_li.c  lis_esolver_pi.c  lis_esolver_rqi.c  lis_esolver_si.c
src/fortran/: Makefile.in  lisf_esolver.c  lisf_init.F  lisf_matrix.c  lisf_solver.c  lisf_system.c  lisf_vector.c
src/fortran/amg/: Makefile.am  Makefile.in  lis_m_aggregate.F90  lis_m_count_time_mod.F90  lis_m_data_creation_AMGCG.F90  lis_m_data_type_AMGCG.F90  lis_m_finit.F90  lis_m_hash.F90  lis_m_queue.F90  lis_m_solver_AMGCG.F90  lis_m_solver_Gnum.F90  lis_m_solver_SR2.F90  lis_s_aggregate.F90  lis_s_data_creation_AMGCG.F90  lis_s_data_type_AMGCG.F90  lis_s_finit.F90  lis_s_queue.F90  lis_s_solver_AMGCG.F90  lis_s_sort.F90  precision.inc
src/matrix/: Makefile.am  Makefile.in  lis_matrix.c  lis_matrix_bsc.c  lis_matrix_bsr.c  lis_matrix_ccs.c  lis_matrix_coo.c  lis_matrix_crs.c  lis_matrix_dia.c  lis_matrix_diag.c  lis_matrix_dns.c  lis_matrix_ell.c  lis_matrix_ilu.c  lis_matrix_jds.c  lis_matrix_mpi.c  lis_matrix_msr.c  lis_matrix_ops.c  lis_matrix_rco.c  lis_matrix_vbr.c
src/matvec/: Makefile.am  Makefile.in  lis_matvec.c  lis_matvec_bsc.c  lis_matvec_bsr.c  lis_matvec_ccs.c  lis_matvec_coo.c  lis_matvec_crs.c  lis_matvec_dia.c  lis_matvec_dns.c  lis_matvec_ell.c  lis_matvec_jds.c  lis_matvec_msr.c  lis_matvec_vbr.c
src/precision/: Makefile.in  lis_precision.c  lis_precision_matvec.c  lis_precision_vec.c
src/precon/: Makefile.in  lis_precon.c  lis_precon_ads.c  lis_precon_hybrid.c  lis_precon_iluc.c  lis_precon_iluk.c  lis_precon_ilut.c  lis_precon_is.c  lis_precon_jacobi.c  lis_precon_saamg.c  lis_precon_sainv.c  lis_precon_ssor.c
src/solver/: Makefile.in  lis_solver.c  lis_solver_bicg.c  lis_solver_bicgsafe.c  lis_solver_bicgstab.c  lis_solver_bicgstabl.c  lis_solver_cg.c  lis_solver_cgs.c  lis_solver_gmres.c  lis_solver_gpbicg.c  lis_solver_gs.c  lis_solver_idrs.c  lis_solver_jacobi.c  lis_solver_minres.c  lis_solver_orthomin.c  lis_solver_qmr.c  lis_solver_sor.c
src/system/: Makefile.in  lis_error.c  lis_hash.c  lis_init.c  lis_input.c  lis_input_hb.c  lis_input_mm.c  lis_memory.c  lis_output.c  lis_output_mm.c  lis_sort.c  lis_times.c
src/vector/: Makefile.in  lis_vector.c  lis_vector_ops.c  lis_vector_opv.c
test/: CMakeLists.txt  Makefile.am  Makefile.in  etest1.c  etest1f.F  etest2.c  etest3.c  etest4.c  etest4f.F  etest5.c  matfiles.txt  spmvtest1.c  spmvtest2.c  spmvtest3.c  spmvtest4.c  spmvtest5.c  test.sh  test1.c  test1f.F  test2.c  test3.c  test4.c  test4f.F  test5.c  test6.c
win32/: Makefile.am  Makefile.in  etest1.icproj  etest1.vcproj  etest1f.vfproj  etest2.icproj  etest2.vcproj  etest3.icproj  etest3.vcproj  etest4.icproj  etest4.vcproj  etest4f.vfproj  etest5.icproj  etest5.vcproj  lis.icproj  lis.sln  lis.vcproj  lis_initf.vfproj  lis_with_fortran.icproj  lis_with_fortran.sln  lis_with_fortran.vcproj  lis_with_fortran_mpi.icproj  lis_with_fortran_mpi.sln  lis_with_fortran_mpi.vcproj  saamg-mpi.vfproj  saamg-seq.vfproj  spmvtest1.icproj  spmvtest1.vcproj  spmvtest2.icproj  spmvtest2.vcproj  spmvtest3.icproj  spmvtest3.vcproj  spmvtest4.icproj  spmvtest4.vcproj  spmvtest5.icproj  spmvtest5.vcproj  test1.icproj  test1.vcproj  test2.icproj  test2.vcproj  (+9 more)
