SUBDIRS = src include test win32

EXTRA_DIST = doc/Makefile \
             doc/double-double.eps \
             doc/lis-manual-en.tex \
             doc/lis-manual-en.pdf \
             doc/lis-manual-ja.tex \
             doc/lis-manual-ja.pdf \
             doc/irises_korin.eps \
             doc/storage01.eps \
             doc/storage01_mpi.eps \
             doc/storage02.eps \
             doc/storage02_mpi.eps \
             doc/storage03.eps \
             doc/storage03_mpi.eps \
             doc/storage04.eps \
             doc/storage04_mpi.eps \
             doc/storage04_omp.eps \
             doc/storage05.eps \
             doc/storage05_mpi.eps \
             doc/storage06.eps \
             doc/storage06_mpi.eps \
             doc/storage06_omp.eps \
             doc/storage07.eps \
             doc/storage07_mpi.eps \
             doc/storage08.eps \
             doc/storage08_mpi.eps \
             doc/storage09.eps \
             doc/storage09_mpi.eps \
             doc/storage10.eps \
             doc/storage10_mpi.eps \
             doc/storage11.eps \
             doc/storage11_mpi.eps

ACLOCAL_AMFLAGS = -I m4

