# test/
# Set include
INCLUDE_DIRECTORIES(
	.
	../include
)
IF (LIS_ENABLE_MPI)
	INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
ENDIF (LIS_ENABLE_MPI)
s
# Create executables
ADD_EXECUTABLE( test1 test1.c)
TARGET_LINK_LIBRARIES( test1 lis)
IF (LIS_ENABLE_MPI)
	TARGET_LINK_LIBRARIES( test1 ${MPI_C_LIBRARIES} )
ENDIF (LIS_ENABLE_MPI)
ADD_EXECUTABLE( test2 test2.c)
TARGET_LINK_LIBRARIES( test2 lis)
IF (LIS_ENABLE_MPI)
	TARGET_LINK_LIBRARIES( test2 ${MPI_C_LIBRARIES} )
ENDIF (LIS_ENABLE_MPI)
ADD_EXECUTABLE( test3 test3.c)
TARGET_LINK_LIBRARIES( test3 lis)
IF (LIS_ENABLE_MPI)
	TARGET_LINK_LIBRARIES( test3 ${MPI_C_LIBRARIES} )
ENDIF (LIS_ENABLE_MPI)
ADD_EXECUTABLE( test4 test4.c)
TARGET_LINK_LIBRARIES( test4 lis)
IF (LIS_ENABLE_MPI)
	TARGET_LINK_LIBRARIES( test4 ${MPI_C_LIBRARIES} )
ENDIF (LIS_ENABLE_MPI)
ADD_EXECUTABLE( test5 test5.c)
TARGET_LINK_LIBRARIES( test5 lis)
IF (LIS_ENABLE_MPI)
	TARGET_LINK_LIBRARIES( test5 ${MPI_C_LIBRARIES} )
ENDIF (LIS_ENABLE_MPI)
ADD_EXECUTABLE( test6 test6.c)
TARGET_LINK_LIBRARIES( test6 lis)
IF (LIS_ENABLE_MPI)
	TARGET_LINK_LIBRARIES( test6 ${MPI_C_LIBRARIES} )
ENDIF (LIS_ENABLE_MPI)
ADD_EXECUTABLE( etest1 etest1.c)
TARGET_LINK_LIBRARIES( etest1 lis)
ADD_EXECUTABLE( etest2 etest2.c)
TARGET_LINK_LIBRARIES( etest2 lis)
ADD_EXECUTABLE( etest3 etest3.c)
TARGET_LINK_LIBRARIES( etest3 lis)
ADD_EXECUTABLE( etest4 etest4.c)
TARGET_LINK_LIBRARIES( etest4 lis)
ADD_EXECUTABLE( etest5 etest5.c)
TARGET_LINK_LIBRARIES( etest5 lis)
ADD_EXECUTABLE( spmvtest1 spmvtest1.c)
TARGET_LINK_LIBRARIES( spmvtest1 lis)
ADD_EXECUTABLE( spmvtest2 spmvtest2.c)
TARGET_LINK_LIBRARIES( spmvtest2 lis)
ADD_EXECUTABLE( spmvtest3 spmvtest3.c)
TARGET_LINK_LIBRARIES( spmvtest3 lis)
ADD_EXECUTABLE( spmvtest4 spmvtest4.c)
TARGET_LINK_LIBRARIES( spmvtest4 lis)
ADD_EXECUTABLE( spmvtest5 spmvtest5.c)
TARGET_LINK_LIBRARIES( spmvtest5 lis)

IF (LIS_ENABLE_FORTRAN)
	ADD_EXECUTABLE( test1f test1f.F)
	TARGET_LINK_LIBRARIES( test1f lis)
	ADD_EXECUTABLE( test4f test4f.F)
	TARGET_LINK_LIBRARIES( test4f lis)
	ADD_EXECUTABLE( etest1f etest1f.F)
	TARGET_LINK_LIBRARIES( etest1f lis)
	ADD_EXECUTABLE( etest4f etest4f.F)
	TARGET_LINK_LIBRARIES( etest4f lis)
ENDIF()

