EXTRA_DIST = lis.icproj lis.vcproj \
             lis.sln lis.suo \
             lis_with_fortran_mpi.sln lis_with_fortran_mpi.suo \
             lis_with_fortran_mpi.icproj lis_with_fortran_mpi.vcproj \
             lis_with_fortran.sln lis_with_fortran.suo \
             lis_with_fortran.icproj lis_with_fortran.vcproj \
             lis_initf.vfproj \
             saamg-mpi.vfproj saamg-seq.vfproj \
             test1.icproj test1.vcproj \
             test1f.vfproj \
             test2.icproj test2.vcproj \
             test3.icproj test3.vcproj \
             test4f.vfproj \
             test4.icproj test4.vcproj \
             test5.icproj test5.vcproj \
             test6.icproj test6.vcproj \
             etest1.icproj etest1.vcproj \
             etest1f.vfproj \
             etest2.icproj etest2.vcproj \
             etest3.icproj etest3.vcproj \
             etest4f.vfproj \
             etest4.icproj etest4.vcproj \
             etest5.icproj etest5.vcproj \
             spmvtest1.icproj spmvtest1.vcproj \
             spmvtest2.icproj spmvtest2.vcproj \
             spmvtest3.icproj spmvtest3.vcproj \
             spmvtest4.icproj spmvtest4.vcproj \
             spmvtest5.icproj spmvtest5.vcproj

ACLOCAL_AMFLAGS = -I m4

